WIP - dis-server collects TFL data from Redis, rather than the TFL API
NB - dis-ingest does not push data to Redis at this point
Expectation is that dis-server is unnecessary, and clients could read JSON
dumped to S3 by dis-ingest.

Signed-off-by: Tom Anderson <toanderson@pivotal.io>