@@ -1,8 +1,6 @@
 package io.pivotal.dis;
 
 import io.pivotal.dis.controller.TflProxyController;
-import io.pivotal.dis.provider.TimeProvider;
-import io.pivotal.dis.provider.TimeProviderImpl;
 import io.pivotal.dis.service.DisruptedLinesService;
 import org.eclipse.jetty.server.Handler;
 import org.eclipse.jetty.server.Request;
@@ -13,56 +11,33 @@ import org.json.JSONObject;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.PrintWriter;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Map;
-import java.util.Properties;
 
 public class Application implements AutoCloseable {
 
     public static void main(String[] args) throws Exception {
         int port = Integer.parseInt(System.getenv("PORT"));
-        Properties properties = loadProperties();
-        URL tflUrl = constructTflUrl(properties);
-        Application application = new Application(port, tflUrl);
+        Application application = new Application(port, constructRedisUri());
         application.run();
     }
 
-    private static URL constructTflUrl(Properties properties) throws MalformedURLException {
-        return new URL("http://api.tfl.gov.uk/Line/Mode/%7Bmodes%7D/Status?modes=tube&detail=False&app_id=" + properties.getProperty("tfl.appId") + "&app_key=" + properties.getProperty("tfl.appKey"));
+    private static URI constructRedisUri() throws URISyntaxException {
+        int redisPort = Integer.parseInt(System.getenv("REDIS_PORT")); // TODO - fix for CF.
+        return new URI("http://localhost:" + redisPort);
     }
 
-    private static Properties loadProperties() throws IOException {
-        try (InputStream inputStream = openResource("application.properties")) {
-            Properties properties = new Properties();
-            properties.load(inputStream);
-            return properties;
-        }
-    }
-
-    private static InputStream openResource(String name) throws FileNotFoundException {
-        InputStream inputStream = Application.class.getResourceAsStream("/" + name);
-        if (inputStream == null) {
-            throw new FileNotFoundException("resource '" + name + "' not found in the classpath");
-        }
-        return inputStream;
-    }
-
-    private final TimeProvider clock;
     private final TflProxyController controller;
     private final DisruptedLinesService disruptedLinesService;
     private final Handler handler;
     private final Server server;
 
-    public Application(int port, URL tflUrl) {
-        clock = new TimeProviderImpl();
-        disruptedLinesService = new DisruptedLinesService(clock, tflUrl);
+    public Application(int port, URI redisUri) {
+        disruptedLinesService = new DisruptedLinesService(redisUri);
         controller = new TflProxyController(disruptedLinesService);
-
         server = new Server(port);
         handler = new AbstractHandler() {
             @Override
